Increased code coverage and basic preformance improvements.
commit 105a7425391e4112e83553d75a0da5c639de7161
Author: Sergey Sidorov <sergey.sidorov@Sergeys-MacBook-Pro.local>
Date:   Sat Aug 8 14:01:03 2026 +0300

    feat: Apply BufferPool to 30+ protocol codecs, fix Maven/Gradle build consistency

    PERFORMANCE OPTIMIZATIONS:
    - Added service/util/BufferPool.java (shared thread-safe buffer pool)
    - Applied BufferPool.getBuffer() to 30+ protocol codecs (was 7)
    - Fixed HealthChecker to use virtual threads (Thread.ofVirtual)
    - Updated PERFORMANCE_IMPROVEMENTS.md with expanded coverage

    MAVEN BUILD FIXES:
    - Fixed 4 modules with wrong parent references (stomp, mqtt, redis, dns)
    - Fixed 4 modules with wrong dependency groupIds (ssg.legoflow -> ssg)
    - Added missing test dependencies (junit, slf4j) to 3 modules
    - Added missing lego-flow-http dependency to stomp module (WebSocket classes)
    - Fixed benchmark module artifactIds (messaging-stomp, messaging-mqtt, etc.)
    - Added missing media-sip/media-rtp dependencies to benchmarks

    GRADLE/MAVEN VERIFICATION:
    - Both builds now succeed (mvn clean test + ./gradlew test --rerun-tasks)
    - Benchmarks module now compiles and tests pass (was pre-structurally broken)

    DOCUMENTATION:
    - Updated README.md: Performance section, buffer pooling coverage
    - Updated AGENTS.md: Build system consistency, verification protocol
    - Updated doc/PERFORMANCE_IMPROVEMENTS.md: Expanded buffer pooling coverage

    FILES CHANGED: 27 modified, 1 added (BufferPool.java)
    TESTS: All 223 Gradle tasks pass, all Maven modules compile and test

commit 9b20f1c326b01d260b691c936bc3ea134ee17dc0
Author: Sergey Sidorov <sergey.sidorov@Sergeys-MacBook-Pro.local>
Date:   Fri Aug 7 23:25:34 2026 +0300

    Fix SIP, Redis, DNS, RTP modules and clean up stale backup files

    Major fixes:
    - SIP: Add stateless decodeRequest/decodeResponse static methods,
      encode(SipMessage), decode(byte[]), pa