@@ -20,7 +20,7 @@ import java.util.function.Function;
  * Backends that fail the health check are marked as unhealthy and excluded from
  * load balancing until they pass again.</p>
  *
- * @since 1.0.0
+ * @since 0.1.0
  */
 public class HealthChecker implements AutoCloseable {
 
@@ -39,7 +39,7 @@ public class HealthChecker implements AutoCloseable {
     /**
      * Creates a new health checker with default settings.
      *
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public HealthChecker() {
         this(Duration.ofSeconds(10), Duration.ofSeconds(5), 3, 2);
@@ -52,7 +52,7 @@ public class HealthChecker implements AutoCloseable {
      * @param timeout the timeout for each health check
      * @param unhealthyThreshold consecutive failures before marking unhealthy
      * @param healthyThreshold consecutive successes before marking healthy
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public HealthChecker(Duration checkInterval, Duration timeout,
                          int unhealthyThreshold, int healthyThreshold) {
@@ -68,7 +68,7 @@ public class HealthChecker implements AutoCloseable {
      * and returns true if the backend is healthy.
      *
      * @param healthCheckFunction the check function
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public void setHealthCheckFunction(Function<BackendServer, Boolean> healthCheckFunction) {
         this.healthCheckFunction = healthCheckFunction;
@@ -78,7 +78,7 @@ public class HealthChecker implements AutoCloseable {
      * Registers a backend server for health checking.
      *
      * @param backend the backend to monitor
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public void addBackend(BackendServer backend) {
         backends.add(backend);
@@ -88,7 +88,7 @@ public class HealthChecker implements AutoCloseable {
      * Removes a backend server from health checking.
      *
      * @param backend the backend to stop monitoring
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public void removeBackend(BackendServer backend) {
         backends.remove(backend);
@@ -97,15 +97,12 @@ public class HealthChecker implements AutoCloseable {
     /**
      * Starts the periodic health checking.
      *
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public void start() {
         if (running.compareAndSet(false, true)) {
-            scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
-                Thread t = new Thread(r, "health-checker");
-                t.setDaemon(true);
-                return t;
-            });
+            scheduler = Executors.newSingleThreadScheduledExecutor(r ->
+                Thread.ofVirtual().name("health-checker").unstarted(r));
             scheduler.scheduleAtFixedRate(this::runChecks,
                     checkInterval.toMillis(), checkInterval.toMillis(), TimeUnit.MILLISECONDS);
             LOG.info("Health checker started with interval {}", checkInterval);
@@ -115,7 +112,7 @@ public class HealthChecker implements AutoCloseable {
     /**
      * Stops the periodic health checking.
      *
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public void stop() {
         if (running.compareAndSet(true, false)) {
@@ -138,7 +135,7 @@ public class HealthChecker implements AutoCloseable {
      * Runs a single round of health checks against all backends.
      * This is public to allow manual triggering in tests.
      *
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public void runChecks() {
         checkCount.incrementAndGet();
@@ -158,7 +155,7 @@ public class HealthChecker implements AutoCloseable {
      * Returns whether the health checker is currently running.
      *
      * @return true if running
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public boolean isRunning() {
         return running.get();
@@ -168,7 +165,7 @@ public class HealthChecker implements AutoCloseable {
      * Returns the total number of health check rounds performed.
      *
      * @return the check count
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public long getCheckCount() {
         return checkCount.get();
@@ -178,7 +175,7 @@ public class HealthChecker implements AutoCloseable {
      * Returns the registered backends.
      *
      * @return the backend list
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public List<BackendServer> getBackends() {
         return List.copyOf(backends);
@@ -188,7 +185,7 @@ public class HealthChecker implements AutoCloseable {
      * Returns the check interval.
      *
      * @return the check interval
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public Duration getCheckInterval() {
         return checkInterval;
@@ -198,7 +195,7 @@ public class HealthChecker implements AutoCloseable {
      * Returns the unhealthy threshold.
      *
      * @return the unhealthy threshold
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public int getUnhealthyThreshold() {
         return unhealthyThreshold;
@@ -208,7 +205,7 @@ public class HealthChecker implements AutoCloseable {
      * Returns the healthy threshold.
      *
      * @return the healthy threshold
-     * @since 1.0.0
+     * @since 0.1.0
      */
     public int getHealthyThreshold() {
         return healthyThreshold;
